--- a/404.html
+++ b/404.html
@@ -121,8 +121,8 @@
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
-      <a href="privacy.html">Privacy Policy</a><br>
-      <a href="terms.html">Terms and Conditions</a>
+      <a href="privacy.html" target="_blank">Privacy Policy</a><br>
+      <a href="terms.html" target="_blank">Terms and Conditions</a>
     </div>
     <!-- Copyright -->
 
