--- a/index.html
+++ b/index.html
@@ -367,17 +367,19 @@
       </div>
 
       <div class="row">
-        <div class="container text-center title-div">
+        <div class="col-6 text-right title-div">
           <input 
           type="submit" 
-          class="btn btn-success btn-green form--button btn-lg mr-3 btn--padding btn-rounded" 
+          class="btn btn-success btn-green form--button btn-lg btn--padding btn-rounded" 
           onclick="validateForm();convert();convertDistance();dilemmaZone()" 
-          value="&#128505; Calculate" />
+          value="&#x2713; Calculate" />
+        </div>
+        <div class="col-6 text-left title-div">
           <input 
           type="reset" 
           class="btn btn-primary btn-blue form--button btn-lg btn--padding btn-rounded" 
           id="formReset" 
-          value="&#128473; Reset" />
+          value="&#x2a2f; Reset" />
         </div>
       </div>
     </form>
@@ -486,8 +488,8 @@
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
-      <a href="privacy.html">Privacy Policy</a><br>
-      <a href="terms.html">Terms and Conditions</a>
+      <a href="privacy.html" target="_blank">Privacy Policy</a><br>
+      <a href="terms.html" target="_blank">Terms and Conditions</a>
     </div>
     <!-- Copyright -->
 
