--- a/terms.html
+++ b/terms.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="help.html">Help</a>
@@ -159,7 +159,7 @@
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
       <a href="privacy.html">Privacy Policy</a><br>
-      <a href="terms.html">Terms and Conditions</a>
+      <a href="terms.html">Terms and Conditions<span class="sr-only">(current)</span></a>
     </div>
     <!-- Copyright -->
 
