--- a/test_yourself.html
+++ b/test_yourself.html
@@ -86,7 +86,7 @@
     <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
-        <h2>Open the map</h2>
+        <h2>Map One</h2>
         <p class="card-text">
          Map one is located in Moscow, Russia at Tverskaya Zastava Square.
         </p>
@@ -99,10 +99,7 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Question One <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided and by using the following data, assess if a dilemma or option zone exists:</p>
-            <p>An alert driver with a better than average reaction times approaches the intersection in dry conditions with good road to tire grip. The driver is cruising at 45 kmh<sup>-1</sup>. 
-            The yellow phase is 4.2 s and interphase 2.2 s. The driver's vehicle is 5.2 m long.</p>
-            <p>You should consider using external sources to determine each of the unknown variables.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on one of the three scenarios to determine if a dilemma zone exists or not.</p>
             </div>
         </div>
       </div>
@@ -113,7 +110,12 @@
             and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
             <p>Measure the intersection length from the south east and continuing north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
-            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+            <div class="text-center">
+            <button class="btn btn-warning btn-yellow form--button mt-2 btn-rounded" 
+            id="randomScenario" 
+            data-toggle="modal" 
+            data-target="#map-1-scene-1">Random Scenario</button>
+            </div>
           </div>
         </div>
       </div>
@@ -122,7 +124,7 @@
 <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
-        <h2>Open the map</h2>
+        <h2>Map Two</h2>
         <p class="card-text">
          Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road. 
         </p>
@@ -154,7 +156,7 @@
      <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
-        <h2>Open the map</h2>
+        <h2>Map Three</h2>
         <p class="card-text">
          Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive. 
         </p>
@@ -186,7 +188,7 @@
 <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
-        <h2>Open the map</h2>
+        <h2>Map Four</h2>
         <p class="card-text">
          Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street. 
         </p>
@@ -218,7 +220,7 @@
     <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
-        <h2>Open the map</h2>
+        <h2>Map Five</h2>
         <p class="card-text">
          Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way. 
         </p>
@@ -248,6 +250,92 @@
     </div>
 
   </section>
+
+  <!-- Modals for Scenarios -->
+  <!-- Map One - Scenario One-->
+  <div class="modal fade" id="map-1-scene-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Random Scenario for Map One</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <p>The initial velocity is <strong><span id="map-1-initialVelocity"></span></strong></p>
+       <p>Yellow light phase is <strong><span id="map-1-ylPhase"></span></strong></p>
+       <p>The interphase is <strong><span id="map-1-rlPhase"></span></strong></p>
+       <p>The driver's reaction time is <strong><span id="map-1-rtRandom"></span></strong></p>
+       <p>The vehicle's tire conditions are described as <strong><span id="map-1-tireCondition"></span></strong></p>
+       <p>The weather conditions are described as <strong><span id="map-1-weatherCondition"></span></strong></p>
+       <p>The vehicle is <strong><span id="map-1-carLength"></span></strong> m long</p>
+       <p>So long you do not refresh the page, this scenario will remain active and you can close and re-open this pop-up with the same scenario loaded. Alternatively 
+       hit the refresh button for a new random scenario.</p>
+       <p>A dilemma zone exists that is... (length)</p>
+       <div class="form-check form-check-inline">
+       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  
+  <label class="form-check-label" for="inlineRadio1">&#x3C; 10 m</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">Between 10 and 20 m</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">&#x3E; 20 m</label>
+</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="map-1-submit" class="btn btn-success btn-submit">Submit</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Map One - Scenario two-->
+  <div class="modal fade" id="map-1-scene-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Scenario 2</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Map One - Scenario three-->
+  <div class="modal fade" id="map-1-scene-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Scenario 3</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
  <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
@@ -318,6 +406,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/maps.js"></script>
+  <script src="assets/scripts/test_yourself.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
