Add distancePhase calculation for the answer checker on test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -253,7 +253,7 @@
 
   <!-- Modals for Scenarios -->
   <!-- Map One - Scenario One-->
-  <div class="modal fade" id="map-1-scene-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="map-1-scene-1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -288,7 +288,7 @@
 </div>
       </div>
       <div class="modal-footer">
-        <button type="button" id="map-1-submit" class="btn btn-success btn-submit">Submit</button>
+        <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="Submit Me 3">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
       </div>
     </div>
