--- a/test_yourself.html
+++ b/test_yourself.html
@@ -66,6 +66,7 @@
        scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
        <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
       <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
+      <div class="d-flex">
       <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-sm-row background-ul">
       <li class="list-group-item background-ul">
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">
@@ -77,6 +78,7 @@
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank">
       <button class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a></li>
       </ul>
+      </div>
       </div>
       </div>
     </div>
@@ -381,7 +383,14 @@
 
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
-   <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+   <div 
+   class="fb-share-button" 
+   data-href="https://pauld0051.github.io/physics-code/index.html" 
+   data-layout="button" 
+   data-size="large">
+   <a target="_blank" 
+   href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+   class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
