--- a/test_yourself.html
+++ b/test_yourself.html
@@ -294,7 +294,7 @@
   </section>
 
   <!-- Modals for Scenarios -->
-  <!-- Map One - Scenario-->
+  <!-- Map One-->
   <div class="modal fade" id="map-1-scene-1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -337,12 +337,55 @@
   </div>
 </div>
 
-<!-- Map One - Scenario two-->
-  <div class="modal fade" id="map-1-scene-2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Map two-->
+ <div class="modal fade" id="map-2-scene-1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Scenario 2</h5>
+        <h5 class="modal-title">Random Scenario for Map Two</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <p>The initial velocity is <strong><span id="map-2-initialVelocity"></span></strong></p>
+       <p>Yellow light phase is <strong><span id="map-2-ylPhase"></span></strong></p>
+       <p>The interphase is <strong><span id="map-2-rlPhase"></span></strong></p>
+       <p>The driver's reaction time is <strong><span id="map-2-rtRandom"></span></strong></p>
+       <p>The vehicle's tire conditions are described as <strong><span id="map-2-tireCondition"></span></strong></p>
+       <p>The weather conditions are described as <strong><span id="map-2-weatherCondition"></span></strong></p>
+       <p>The vehicle is <strong><span id="map-2-carLength"></span></strong> m long</p>
+       <p>So long you do not refresh the page, this scenario will remain active and you can close and re-open this pop-up with the same scenario loaded. Alternatively 
+       hit the refresh button for a new random scenario.</p>
+       <p>A dilemma zone exists that is... (length)</p>
+       <div class="form-check form-check-inline">
+       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option1">
+  
+  <label class="form-check-label" for="inlineRadio1">&#x3C; 10 m</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option2">
+  <label class="form-check-label" for="inlineRadio2">Between 10 and 20 m</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option3">
+  <label class="form-check-label" for="inlineRadio3">&#x3E; 20 m</label>
+</div>
+      </div>
+      <div class="modal-footer">
+        <input type="submit" id="map-2-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
+      </div>
+    </div>
+  </div>
+</div>  
+
+<!-- Map three -->
+  <div class="modal fade" id="map-3-scene-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Scenario 3</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -358,8 +401,29 @@
   </div>
 </div>
 
-<!-- Map One - Scenario three-->
-  <div class="modal fade" id="map-1-scene-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Map four -->
+  <div class="modal fade" id="map-4-scene-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Scenario 3</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Map five -->
+  <div class="modal fade" id="map-5-scene-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
