--- a/test_yourself.html
+++ b/test_yourself.html
@@ -117,7 +117,8 @@
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
             id="randomScenario" 
             data-toggle="modal" 
-            data-target="#map-1-scene-1">Random Scenario</button>
+            data-target="#map-1-scene-1">Random Scenario
+            </button>
             <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
             id="refresh_page">New Scenario</button>
            </div>
@@ -510,7 +511,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/maps.js"></script>
-  <script src="assets/scripts/test_yourself.js"></script>
+  <script src="assets/scripts/test_yourself2.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
